docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-linked-card.scss
@use '../variables/general' as *;
@use '../functions/general' as *;
@use '../functions/animation' as *;
@use '../mixins/theme' as *;
@use '../mixins/breakpoints' as *;
@use '../mixins/icons' as *;
@use '../mixins/text' as *;

.hb-vertical-linked-card {
  @include hb-traditional {
    --link-base-current-color: var(--palette--black);
    --link-base-hover-current-color: var(--palette--gray-dark);
  }

  @include hb-themes(('colorful', 'airy')) {
    --link-base-current-color: var(--palette--white);
    --link-base-hover-current-color: var(--palette--gray-medium);
  }

  .hs-well,
  .hs-breakout-box {
    --link-base-current-color: var(--palette--link-base-color);
    --link-base-hover-current-color: var(--palette--link-base-hover-color);
  }

  position: relative;
  background-color: transparent;

  &:hover,
  &:focus {
    cursor: pointer;
  }

  @include hb-themes(('colorful', 'airy')) {
    // The margin-top matches the margin-top on both the title and image to prevent
    // overlap issues.
    // The margin-left matches the negative margin-left on the title to prevent
    // overlap issues.
    &:has(.hb-vertical-linked-card__img):has(.hb-vertical-linked-card__title),
    &:has(.hb-vertical-linked-card__title) {
      margin: hb-spacing-width('xs') 0 0 hb-calculate-rems(31px);
    }

    padding-bottom: hb-calculate-rems(28px);
    color: var(--palette--white);

    background-image: linear-gradient(
      to bottom,
      transparent,
      transparent hb-calculate-rems(20px),
      var(--palette--primary-dark) hb-calculate-rems(20px)
    );
  }

  .hb-stretch-vertical-linked-cards & {
    display: flex;
    flex-flow: column nowrap;
  }

  // Stretched vertical linked cards inside a grid.
  .hb-stretch-vertical-linked-cards .hb-grid__item & {
    align-self: stretch;
  }

  &__img {
    overflow: hidden;

    img {
      width: 100%;
      transition: hb-transition(transform);

      .hb-vertical-linked-card:hover &,
      .hb-vertical-linked-card:focus &,
      .hb-vertical-linked-card.is-focused & {
        transform: scale($hb-image-hover-scale);
      }
    }
  }

  .hb-media-image {
    margin: 0;
  }

  &__title {
    // Without this the negative margins on the title cause it to lay under the
    // image. Adding position relative makes sure everything is layered correctly.
    position: relative;
    hyphens: auto;
    word-break: normal;
    overflow-wrap: anywhere;
    transition: hb-transition(background-color);

    @include hb-themes(('colorful', 'airy')) {
      padding: hb-calculate-rems(20px);
      margin: 0 hb-calculate-rems(20px) 0 hb-calculate-rems(-31px);
      background-color: var(--palette--secondary);

      // Update padding when card is in 4 columns.
      .field-hs-collection-items.item-per-row--4 & {
        padding: hb-calculate-rems(18px);
      }

      @include grid-media-min('sm') {
        margin: hb-calculate-rems(-24px) hb-calculate-rems(20px) 0
          hb-calculate-rems(-31px);
      }
    }

    @include hb-traditional {
      padding: hb-calculate-rems(16px);
      color: var(--palette--white);
      background-color: var(--palette--primary);
      margin: 0;
    }

    .hb-vertical-linked-card:hover &,
    .hb-vertical-linked-card:focus &,
    .hb-vertical-linked-card.is-focused & {
      @include hb-themes(('colorful', 'airy')) {
        background-color: var(--palette--secondary-darken-12);
      }

      @include hb-traditional {
        background-color: var(--palette--primary-dark);
        text-decoration: underline;
      }
    }
  }

  &__title__link {
    &::after {
      content: '';
      display: inline-block;
      position: relative;
      height: hb-calculate-rems(14px);

      @include hb-icon-link-arrow('white');

      @include hb-themes(('airy', 'colorful')) {
        width: hb-calculate-rems(27.5px);
        mask-size: 60%;
      }

      @include hb-traditional {
        width: hb-calculate-rems(33px);
        mask-size: auto;
      }

      mask-position: 6px;
      transition: hb-transition(mask-position);
    }

    .hb-vertical-linked-card:hover &::after,
    .hb-vertical-linked-card:focus &::after,
    .hb-vertical-linked-card.is-focused &::after {
      mask-position: 12px;
    }
  }

  &__title__link,
  &__title__link.ext {
    color: var(--palette--white);
    text-decoration: none;

    &:hover,
    &:focus {
      color: var(--palette--white);
      background-image: none;
    }
  }

  &__description {
    @include hb-description;
    word-break: normal;
    overflow-wrap: anywhere;
    flex: 1 1 auto;

    @include hb-themes(('airy', 'colorful')) {
      padding: hb-calculate-rems(20px) hb-calculate-rems(20px) 0;

      // Update padding when card is in 4 columns.
      .field-hs-collection-items.item-per-row--4 & {
        padding: hb-calculate-rems(18px) hb-calculate-rems(18px) 0;
      }

      // For those scenarios that a breakout box or hs-well style is being used in a WYSIWYG.
      .hs-well,
      .hs-breakout-box {
        color: var(--palette--black);
      }
    }

    @include hb-traditional {
      background-color: var(--palette--tertiary-reversed);
      padding: hb-calculate-rems(16px) hb-calculate-rems(16px)
        hb-calculate-rems(28px);
    }

    @include grid-media-min('sm') {
      font-size: hb-calculate-rems(18px);
    }

    .field-hs-postcard-body {
      margin-bottom: 0;
    }

    a {
      @include hb-themes(('colorful', 'airy')) {
        background-image: none;
      }
    }
  }
}

